--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-    "name": "simple-http-server",
-    "version": "1.0.0",
-    "scripts": {
-        "build": "echo Nothing to build...",
-        "start": "node index.js"
-    }
+  "name": "docker_web_app",
+  "version": "1.0.0",
+  "description": "Node.js on Docker",
+  "author": "First Last <first.last@example.com>",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.16.1"
+  }
 }
